Weight pixels by their respective alpha value in wxImage::ResampleBox
Without this weighting, even the color value of invisible pixels with a zero
alpha would influence the result.

Closes #17724.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -114,6 +114,7 @@ All (GUI):
 - Fix calculating point position in wxDataViewCtrl::HitTest().
 - Fix position of the rectangle returned by wxDataViewCtrl::GetItemRect().
 - Add wxDataViewRenderer::GetAccessibleDescription().
+- Improve wxImage::Scale() handling of pixels with alpha channel (Tim Kosse).
 
 wxGTK:
 
