Don't send mouse events to disabled windows in wxOSX
Disabled controls are not supposed to accept any input, so don't send any
mouse events to them.

This fixes the behaviour of wxSlider which could be moved (and generated the
corresponding events) even when it was disabled.

Closes #17194.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -165,6 +165,7 @@ wxOSX:
 - Implement wxDataViewCtrl::SetRowHeight().
 - Add OSXEnableAutomaticQuoteSubstitution(), OSXEnableAutomaticDashSubstitution()
   and OSXDisableAllSmartSubstitutions() to control wxTextCtrl smart behavior.
+- Don't allow interacting with disabled wxSlider (Andreas Falkenhahn).
 
 Unix:
 
