Fix setting alignment for wxOSX wxTextCtrl with wxTE_DONTWRAP
Don't make the controls with wxTE_DONTWRAP (a.k.a. wxHSCROLL) style
"infinitely" wide, but just "very" wide to allow alignment still work in it.

See #17529.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -166,6 +166,7 @@ wxOSX:
 - Add OSXEnableAutomaticQuoteSubstitution(), OSXEnableAutomaticDashSubstitution()
   and OSXDisableAllSmartSubstitutions() to control wxTextCtrl smart behavior.
 - Don't allow interacting with disabled wxSlider (Andreas Falkenhahn).
+- Fix setting alignment in wxTextCtrl with wxTE_DONTWRAP (Andreas Falkenhahn).
 
 Unix:
 
