Add Microsoft Visual Studio 2017 solution file for building wxMSW
Allow building with VS15 out of the box.

Closes https://github.com/wxWidgets/wxWidgets/pull/353

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -136,6 +136,7 @@ wxGTK:
 
 wxMSW:
 
+- Add support for building with Microsoft Visual Studio 2017 (Tobias Taschner).
 - Enable wxStackWalker in MinGW64 builds.
 - Fix crash when using wxCHMHelpController() in 64 bit builds (Xlord2).
 - Fix MDI menu display after failure to create a child frame (troelsk).
