--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -117,6 +117,7 @@ All (GUI):
 - Fix position of the rectangle returned by wxDataViewCtrl::GetItemRect().
 - Add wxDataViewRenderer::GetAccessibleDescription().
 - Improve wxImage::Scale() handling of pixels with alpha channel (Tim Kosse).
+- Fix parsing of RGBA strings in wxColour (Laurent Poujoulat).
 
 wxGTK:
 
