Allow hiding command line arguments from Usage()
Add wxCMD_LINE_HIDDEN wxCmdLineParser flag allowing to hide options and/or
parameters.

A hidden/unlisted argument is processed as usual, but not shown in the output
given by Usage(). A use case for such could be diagnostics switches that
should exist but are not useful to the end user.

Closes https://github.com/wxWidgets/wxWidgets/pull/390

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -83,6 +83,7 @@ All:
 - Allow using Bind() with event handlers non-publicly deriving from
   wxEvtHandler and/or wxTrackable in C++11 code (Raul Tambre, mmarsan).
 - Update bundled expat to 2.2.0 (Catalin Raceanu).
+- Add wxCMD_LINE_HIDDEN wxCmdLineParser flag (Lauri Nurmi).
 
 All (GUI):
 
