Refactor code in wxQuantize() for MSVC to avoid crash
VC++ compilers (at least up to VS 2015) seem to generate incorrect code for the dithering code taken from libjpeg (pass2_fs_dither() function), where it is known to create problems too.
Refactor the code to avoid invalid optimization in this function and turn optimization on.

Closes #17764.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -119,6 +119,7 @@ All (GUI):
 - Add wxDataViewRenderer::GetAccessibleDescription().
 - Improve wxImage::Scale() handling of pixels with alpha channel (Tim Kosse).
 - Fix parsing of RGBA strings in wxColour (Laurent Poujoulat).
+- Refactor code in wxQuantize() for MSVC to avoid crash.
 
 wxGTK:
 
