--- a/docs/msw/install.txt
+++ b/docs/msw/install.txt
@@ -103,10 +103,10 @@ Microsoft Visual C++ Compilation
 * From the IDE using the provided project files:
 
 Ready to use project files are provided for VC++ versions 7, 8, 9,
-10, 11, 12 and 14 (also known as MSVS 2003, 2005, 2008, 2010, 2012, 2013
-and 2015 respectively).
+10, 11, 12, 14 and 15 (also known as MSVS 2003, 2005, 2008, 2010, 2012, 2013,
+2015 and 2017 respectively).
 
-Simply open wx_vcN.sln (for N=7, 8, 9, 10, 11, 12, or 14) file,
+Simply open wx_vcN.sln (for N=7, 8, 9, 10, 11, 12, 14, or 15) file,
 select the appropriate configuration (Debug or Release, static or DLL)
 and build the solution. Notice that when building a DLL configuration,
 you may need to perform the build several times because the projects
