Fix underline length for underlined text (wxPostScriptDC)
Draw underline relatively to the baseline and obtain line parameters using 'stringwidth' operator instead of calculating them manually based on the parameters returned by DoGetTextExtent(), which are not always accurate (e.g. if no AFM files are available).

Closes #17788.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -120,6 +120,7 @@ All (GUI):
 - Improve wxImage::Scale() handling of pixels with alpha channel (Tim Kosse).
 - Fix parsing of RGBA strings in wxColour (Laurent Poujoulat).
 - Refactor code in wxQuantize() for MSVC to avoid crash.
+- Fix drawing rotated and/or underlined text on wxPostScriptDC.
 
 wxGTK:
 
