Document Expat 2.2.0 upgrade in the change log

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -81,6 +81,7 @@ All:
 - Add wxString::cbegin() and cend() method (Lauri Nurmi).
 - Allow using Bind() with event handlers non-publicly deriving from
   wxEvtHandler and/or wxTrackable in C++11 code (Raul Tambre, mmarsan).
+- Update bundled expat to 2.2.0 (Catalin Raceanu).
 
 All (GUI):
 
