--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -69,6 +69,7 @@ INCOMPATIBLE CHANGES SINCE 3.1.0:
 All:
 
 - Add wxSecretStore for storing passwords using the OS-provided facilities.
+- Add support for compiling application code with wxNO_UNSAFE_WXSTRING_CONV.
 - Add support for the micro version (third component) to OS and toolkit version
   functions. See wxGetOsVersion(), wxPlatformInfo, and wxAppTraits.
 - wxLogInfo() now logs messages if the log level is high enough, even without
