Remove references to never generated wxSTC events
EVT_STC_KEY and EVT_STC_URIDROPPED events are never generated so there is no need to reference them in the code and documentation. For backwards compatibility reasons their declarations are not entirely removed but marked as deprecated.

Closes #17688.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -124,6 +124,7 @@ All (GUI):
 - Refactor code in wxQuantize() for MSVC to avoid crash.
 - Fix drawing rotated and/or underlined text on wxPostScriptDC.
 - Support multiline strings in wxPostScriptDC::DrawText(), DrawRotatedText().
+- Deprecate wxEVT_STC_KEY and wxEVT_STC_URIDROPPED events (NewPagodi).
 
 wxGTK:
 
