Optimize PostScript code generated by wxPostScriptDC
PostScript code to register (and re-encode) given font should be emitted only once. Once registered, the font is available in the entire document and there is no need to register it again.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -126,6 +126,7 @@ All (GUI):
 - Fix drawing rotated and/or underlined text on wxPostScriptDC.
 - Support multiline strings in wxPostScriptDC::DrawText(), DrawRotatedText().
 - Deprecate wxEVT_STC_KEY and wxEVT_STC_URIDROPPED events (NewPagodi).
+- Optimize font registration in PostScript code emitted by wxPostScriptDC.
 
 wxGTK:
 
