--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -127,6 +127,7 @@ All (GUI):
 - Support multiline strings in wxPostScriptDC::DrawText(), DrawRotatedText().
 - Deprecate wxEVT_STC_KEY and wxEVT_STC_URIDROPPED events (NewPagodi).
 - Optimize font registration in PostScript code emitted by wxPostScriptDC.
+- Fix drawing filled arc with wxPostScriptDC::DrawArc().
 
 wxGTK:
 
