Simplify PostScript code generated by wxPostScriptDC to draw elliptic arc
Optimize procedure 'ellipticarc' by doing all operations on the operand stack instead of creating local dictionary and temporary variables.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -128,6 +128,7 @@ All (GUI):
 - Deprecate wxEVT_STC_KEY and wxEVT_STC_URIDROPPED events (NewPagodi).
 - Optimize font registration in PostScript code emitted by wxPostScriptDC.
 - Fix drawing filled arc with wxPostScriptDC::DrawArc().
+- Optimize PostScript code emitted by wxPostScriptDC to draw elliptic arcs.
 
 wxGTK:
 
