Extend FindText() to return end position of matched text in wxSTC
New 5th parameter of FindText() can be used to receive the end position of matched text returned by SCI_FINDTEXT API.

Closes #17305.
Closes https://github.com/wxWidgets/wxWidgets/pull/23

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -130,6 +130,8 @@ All (GUI):
 - Fix drawing filled arc with wxPostScriptDC::DrawArc().
 - Optimize PostScript code emitted by wxPostScriptDC to draw elliptic arcs.
 - Add wxStyledTextCtrl::AutoCompGetCurrentText() (NewPagodi).
+- Extend wxStyledTextCtrl::FindText() to return end position of matched
+  text (NewPagodi).
 
 wxGTK:
 
