Don't crash in wxFFile::Eof() and Error() if file is closed
Assert and return false instead, this is more developer-friendly.

Add unit tests to check that these functions really work as expected when
called on a closed file.

Closes #17828.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -84,6 +84,7 @@ All:
   wxEvtHandler and/or wxTrackable in C++11 code (Raul Tambre, mmarsan).
 - Update bundled expat to 2.2.0 (Catalin Raceanu).
 - Add wxCMD_LINE_HIDDEN wxCmdLineParser flag (Lauri Nurmi).
+- Don't crash in wxFFile::Eof() or Error() on closed file (jprotopopov).
 
 All (GUI):
 
