--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -113,6 +113,7 @@ All (GUI):
 - Make wxDataViewCtrl::Expand() expand ancestors in native ports too.
 - Add wxDataViewTextRenderer::EnableMarkup().
 - Add wxDataViewCtrl::SetHeaderAttr().
+- Add wxDataViewCtrl::GetTopItem() and GetCountPerPage() (Andreas Falkenhahn).
 - Add wxListCtrl::SetHeaderAttr().
 - Add support for using markup in wxDataViewCtrl text items.
 - Implement auto complete in generic wxSearchCtrl (Eric Jensen).
