--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -147,6 +147,7 @@ wxGTK:
 - Fix wxBitmap ctor from XBM for non-square bitmaps.
 - Fix wxDC::GetClippingBox() for transformed wxDC.
 - Add support for affine transformation matrix in wxDC (GTK+ 3).
+- Fix wxMemoryDC::Blit() with itself as source (GTK+ 3).
 
 wxMSW:
 
