Fix displaying labels of wxRadioBox items
Labels containing mnemonic prefixes (&) and literal underscore characters
have to be converted to the proper GTK labels where underscore
characters act as mnemonic markers. If label contains mnemonic then
dedicated function gtk_radio_button_new_with_mnemonic() should be used
to create radio button item.

Closes #17419.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -148,6 +148,7 @@ wxGTK:
 - Fix wxDC::GetClippingBox() for transformed wxDC.
 - Add support for affine transformation matrix in wxDC (GTK+ 3).
 - Fix wxMemoryDC::Blit() with itself as source (GTK+ 3).
+- Fix displaying labels of wxRadioBox items.
 
 wxMSW:
 
