Fix inserting multiple items to wxRearrangeList
In wxRearrangeList implementations (like wxMSW) where DoInsertItemsInLoop()
and DoInsertOneItem() are not used to insert multiple items, DoInsertItems()
has to be overriden to do this insertion.

See #17836.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -134,6 +134,7 @@ All (GUI):
 - Add wxStyledTextCtrl::AutoCompGetCurrentText() (NewPagodi).
 - Extend wxStyledTextCtrl::FindText() to return end position of matched
   text (NewPagodi).
+- Fix adding/removing items to/from wxRearrangeList.
 
 wxGTK:
 
