Convert 0RGB wxBitmaps to RGB when copying them to clipboard
Not all applications recognize properly 0RGB bitmap format so for the sake
of interoperability bitmaps in such format should be converted to plain
24 bpp RGB format prior to being copied to the clipboard.

Closes #17640.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -178,6 +178,7 @@ wxMSW:
 - Use cairo_win32_surface_create_with_format() to create ARGB surface from
   wxMemoryDC (Cairo >= 1.15.4).
 - Fix updating bounding box in wxDC::DrawSpline().
+- Fix placing 0RGB wxBitmaps on the clipboard.
 
 wxOSX:
 
