Fix adding bitmap to clipboard when wxUSE_OLE == 0 (wxMSW)
When CF_DIB object is placed to the clipboard, a handle to the memory
object containing a BITMAPINFO structure followed by the bitmap bits should
be passed to SetClipboardData(), not a handle to a DIB section.
Also, wxClipboard is the owner of the wxDataObject being added, so it
should release passed object.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -179,6 +179,7 @@ wxMSW:
   wxMemoryDC (Cairo >= 1.15.4).
 - Fix updating bounding box in wxDC::DrawSpline().
 - Fix placing 0RGB wxBitmaps on the clipboard.
+- Fix adding wxBitmap to clipboard when wxUSE_OLE == 0.
 
 wxOSX:
 
