--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -154,6 +154,7 @@ wxGTK:
 wxMSW:
 
 - Add support for building with Microsoft Visual Studio 2017 (Tobias Taschner).
+- Allow loading icons from resources in wxIconBundle (PB).
 - Enable wxStackWalker in MinGW64 builds.
 - Fix crash when using wxCHMHelpController() in 64 bit builds (Xlord2).
 - Fix wxSpinCtrl appearance: show arrows inside the control (Catalin Raceanu).
