--- a/locale/gl_ES.po
+++ b/locale/gl_ES.po
@@ -3,7 +3,7 @@
 # Nuria Andión <nandiez@gmail.com>, 2013.
 msgid ""
 msgstr ""
-"Project-Id-Version: wxWidgets 3.0\n"
+"Project-Id-Version: wxWidgets 3.1\n
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-21 14:25+0200\n"
 "PO-Revision-Date: 2013-11-01 21:34+0100\n"
