--- a/locale/af.po
+++ b/locale/af.po
@@ -1,7 +1,7 @@
 # F Wolff <friedel@translate.org.za>, 2013.
 msgid ""
 msgstr ""
-"Project-Id-Version: wxWidgets 3.1\n
+"Project-Id-Version: wxWidgets 3.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-21 14:25+0200\n"
 "PO-Revision-Date: 2013-11-04 10:21+0200\n"
