--- a/locale/da.po
+++ b/locale/da.po
@@ -4,7 +4,7 @@
 # scootergrisen, 2016.
 msgid ""
 msgstr ""
-"Project-Id-Version: wxWidgets 3.1\n
+"Project-Id-Version: wxWidgets 3.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-21 14:25+0200\n"
 "PO-Revision-Date: 2016-11-28 00:00+0000\n"
