--- a/locale/eu.po
+++ b/locale/eu.po
@@ -1,7 +1,7 @@
 # Xabier Aramendi <azpidatziak@gmail.com>, 2011-2015.
 msgid ""
 msgstr ""
-"Project-Id-Version: wxWidgets 3.1\n
+"Project-Id-Version: wxWidgets 3.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-21 14:25+0200\n"
 "PO-Revision-Date: 2015-07-18 21:39+0200\n"
