--- a/locale/pt.po
+++ b/locale/pt.po
@@ -7,7 +7,7 @@
 # Alfredo and Manuela Silva <manuela.silva@sky.com>, 2014.
 msgid ""
 msgstr ""
-"Project-Id-Version: wxWidgets 3.1\n
+"Project-Id-Version: wxWidgets 3.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-21 14:25+0200\n"
 "PO-Revision-Date: 2014-03-07 16:07+0100\n"
