--- a/locale/sq.po
+++ b/locale/sq.po
@@ -1,7 +1,7 @@
 # Copyright (C) Besnik Bleta <besnik@programeshqip.org>, 2004-2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: wxWidgets 3.1\n
+"Project-Id-Version: wxWidgets 3.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-05-21 14:25+0200\n"
 "PO-Revision-Date: 2006-03-15 18:41+0200\n"
