Add support for bitmaps to wxToggleButton XRC handler
Handle "bitmap" and "bitmapposition" attributes in wxToggleButton XRC handler,
just as it's already done for wxBitmap and wxBitmapToggleButton.

Closes #17850.

--- a/docs/changes.txt
+++ b/docs/changes.txt
@@ -136,6 +136,7 @@ All (GUI):
   text (NewPagodi).
 - Fix adding/removing items to/from wxRearrangeList.
 - Handle wxST_ELLIPSIZE_XXX styles in wxStaticText XRC handler (tm).
+- Add support for bitmaps to wxToggleButton XRC handler (tm).
 
 wxGTK:
 
